update deployment section & demo uri